--- a/pixi.toml
+++ b/pixi.toml
@@ -10,6 +10,7 @@ channels = ["conda-forge"]
 platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]
 
 [dependencies]
+beautifulsoup4 = ">=4.12.0"
 matplotlib = "~=3.0"
 numpy = ">1.25"
 pandas = ">2.0"
