--- a/pixi.toml
+++ b/pixi.toml
@@ -9,8 +9,13 @@ repository = "https://github.com/Alex-bzh/python-M1LTE"
 channels = ["conda-forge"]
 platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]
 
+[tasks]
+start = "jupyter lab"
+
 [dependencies]
-beautifulsoup4 = ">=4.12.0"
+beautifulsoup4 = ">4.12.0"
+jupyterlab = ">4.*"
+jupyterlab-latex = ">3.*"
 matplotlib = "~=3.0"
 numpy = ">1.25"
 pandas = ">2.0"
