--- a/environment.yml
+++ b/environment.yml
@@ -7,5 +7,7 @@ dependencies:
   - jupyterlab=4.1.0
   - jupyterlab-latex=3.1
   - matplotlib=3.8.2
+  - nltk
   - numpy=1.26.4
   - python=3.11
+  - spacy=3.7
