--- a/pixi.toml
+++ b/pixi.toml
@@ -17,7 +17,9 @@ beautifulsoup4 = ">4.12.0"
 jupyterlab = ">4.*"
 jupyterlab-latex = ">3.*"
 matplotlib = "~=3.0"
+nltk = ">3.8"
 numpy = ">1.25"
 pandas = ">2.0"
 python = ">3.10"
 seaborn = ">0.13.0"
+spacy = ">3.7"
