--- a/pixi.toml
+++ b/pixi.toml
@@ -14,6 +14,7 @@ start = "jupyter lab"
 
 [dependencies]
 beautifulsoup4 = ">4.12.0"
+gensim = ">4.*"
 jupyterlab = ">4.*"
 jupyterlab-latex = ">3.*"
 matplotlib = "~=3.0"
