--- a/pixi.toml
+++ b/pixi.toml
@@ -20,7 +20,7 @@ jupyterlab-latex = ">3.*"
 matplotlib = "~=3.0"
 nltk = ">3.8"
 numpy = ">1.25"
-pandas = ">2.0"
+pandas = ">=2.2.2,<2.3"
 python = ">3.10"
 seaborn = ">0.13.0"
 spacy = ">3.7"
